--- a/sass/partials/_objects.scss
+++ b/sass/partials/_objects.scss
@@ -97,6 +97,7 @@
     background: transparent url(../images/socialicons.png) no-repeat 0 0;
     width: 46px;
     height: 46px;
+    margin: 5px;
     // TODO: Figure out a better way to "out-specify" the ID selector from Stanford Framewok
     padding: 0 !important;
     opacity: .75;
